{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "16d33b42-7de2-4d63-99e7-d8aa982cd7c3",
            "actions": [
                {
                    "name": "FireAction",
                    "type": "Button",
                    "id": "04f20143-aaba-4408-927f-1a5e96d2a323",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SkillAction",
                    "type": "Button",
                    "id": "fb2e4fc6-aed0-4587-a448-0e7029dc2302",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Horizontal",
                    "type": "Button",
                    "id": "9fb15b54-5c57-4837-869c-e8b331b5af9d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "57c35276-d0ec-40de-844b-773762d2e9c0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cf57544e-68db-45bc-ae5a-85d156be1f8b",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FireAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd5477c1-69e7-462b-a2ed-d309cfb99c12",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkillAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "33e482c6-1d77-4c75-9af8-5650cabaf575",
                    "path": "1DAxis",
                    "interactions": "Press(pressPoint=0.2,behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "975c2be6-992a-482d-96ee-8ea934d702a9",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "58c8464b-5299-4451-b76f-7f8b19ca739c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "69e882bc-1afc-4228-962b-7dd952f5672c",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}